add test case for removeDocuments